공지 히스토리 구현